--- a/src/app/components/wizard-stepper/wizard-stepper.component.html
+++ b/src/app/components/wizard-stepper/wizard-stepper.component.html
@@ -1,15 +1,10 @@
-<mat-horizontal-stepper *ngIf="steps"  #stepper>
+<mat-horizontal-stepper *ngIf="steps" >
   <mat-step *ngFor="let step of steps"
             [optional]="step.stepType.optional"
             [editable]="step.stepType.editable"
             [completed]="step.stepType.completed"
   >
-  <!--todo create wizardStepComponent and view form -->
-    <app-form-generator [formName]="step.formName" [fields]="step.form" [formId]="step.formId" ></app-form-generator>
-    <div>
-      <button mat-button matStepperPrevious>Back</button>
-      <button mat-button matStepperNext (click)="isFormValid()">Next</button>
-    </div>
+    <app-step [step] = "step"></app-step>
   </mat-step>
 
 </mat-horizontal-stepper>
