prevent next if form invalid

--- a/src/app/components/step/step.component.html
+++ b/src/app/components/step/step.component.html
@@ -6,5 +6,5 @@
 ></app-form-generator>
 <div>
   <button mat-button matStepperPrevious>Back</button>
-  <button mat-button matStepperNext (click)="isFormValid()">Next</button>
+  <button mat-button matStepperNext (click)="isFormValid($event)">Next</button>
 </div>
