--- a/src/app/components/controls/datepicker/datepicker.component.html
+++ b/src/app/components/controls/datepicker/datepicker.component.html
@@ -1,5 +1,5 @@
 <!--<app-control-layout [layout]="layout">-->
-  <mat-form-field [floatLabel]="'always'" [formGroup]="form">
+  <mat-form-field [floatLabel]="'always'" [formGroup]="form" class="fa-datepicker">
     <!--<div matTooltip="{{control.tooltip}}">-->
     <mat-label>{{control.label}}</mat-label>
     <input matInput type="{{control.type}}" [matDatepicker]="datepicker" [id]="control.id" placeholder="{{control.format}}"
