--- a/src/app/components/form-builder/form-builder/form-builder.component.html
+++ b/src/app/components/form-builder/form-builder/form-builder.component.html
@@ -1,5 +1,5 @@
+<div class="fa-headline">{{formName}}</div>
 <form #stepForm  id={{formId}} [formGroup]="form" *ngIf="controls">
-  <h4>{{formName}}</h4>
   <div *ngFor="let control of controls">
     <app-control-builder [control]="control" [form]="form"></app-control-builder>
   </div>
