--- a/src/app/components/form-wizard/form-wizard.component.html
+++ b/src/app/components/form-wizard/form-wizard.component.html
@@ -1,1 +1,1 @@
-<app-wizard-stepper [formsWizard] = 'formsWizard'></app-wizard-stepper>
+<app-wizard-stepper class="wizard-stepper" [formsWizard] = 'formsWizard'></app-wizard-stepper>
