--- a/src/app/components/step/step.component.html
+++ b/src/app/components/step/step.component.html
@@ -5,8 +5,10 @@
     [formId]="step.formId"
   ></app-form-generator>
   <div id="step-action-buttons-wrapper">
-    <button class="fa-raised-button" mat-button matStepperPrevious>Back</button>
-    <button class="fa-raised-button" *ngIf="!isLastStep; else submitBtn" mat-button matStepperNext (click)="isFormValid()">Next</button>
+    <button class="fa-raised-button" *ngIf="!isFirstStep" mat-button matStepperPrevious>Back</button>
+    <button class="fa-raised-button" *ngIf="!isLastStep; else submitBtn" mat-button matStepperNext (click)="isFormValid()">
+      {{step.stepType.optional ? 'Skip' : 'Next'}}
+    </button>
     <ng-template #submitBtn>
       <button class="fa-raised-button" mat-button (click)="submit()">Submit</button>
     </ng-template>
