--- a/src/app/components/step/step.component.html
+++ b/src/app/components/step/step.component.html
@@ -10,7 +10,7 @@
       {{step.stepType.optional ? 'Skip' : 'Next'}}
     </button>
     <ng-template #submitBtn>
-      <button class="fa-raised-button" mat-button (click)="submit()">Submit</button>
+      <button class="fa-raised-button" type="submit" mat-button (click)="submit()">Submit</button>
     </ng-template>
   </div>
 </div>
