--- a/src/app/components/wizard-stepper/wizard-stepper.component.html
+++ b/src/app/components/wizard-stepper/wizard-stepper.component.html
@@ -1,16 +1,13 @@
-<mat-horizontal-stepper linear  #stepper *ngIf="steps" >
-  <mat-step class="wizard-step" *ngFor="let step of steps"
+<mat-horizontal-stepper linear #stepper *ngIf="steps" >
+  <mat-step class="wizard-step" *ngFor="let step of steps" [stepControl]="formsList[stepper.selectedIndex]"
             [optional]="step.stepType.optional"
-            [editable]="step.stepType.editable"
-            [completed]="step.stepType.completed">
+            [editable]="step.stepType.editable">
     <ng-template matStepLabel>{{step.stepLabel}}</ng-template>
-{{step.stepType.optional}}
     <app-step class="app-step"
       [isFirstStep] = "stepper.selectedIndex === 0"
       [isLastStep] = "stepper.selectedIndex === formsList.length-1"
       [step] = "step"
       [form] = "formsList[stepper.selectedIndex]"
-      (IsFormValid) = "notifyIsFormValid($event)"
       (wizardSubmitted) = "notifyWizardSubmitted()"
     ></app-step>
   </mat-step>
