--- a/src/app/components/form-generator/form-generator/form-generator.component.html
+++ b/src/app/components/form-generator/form-generator/form-generator.component.html
@@ -1,6 +1,7 @@
 <div id="wrapper">
   <div id="form-content-wrapper" *ngIf="fields">
     <app-form-builder
+      [step] = "step"
       [formName]="formName"
       [controls]="fields"
       [formId]="formId"
