--- a/src/app/components/step/step.component.html
+++ b/src/app/components/step/step.component.html
@@ -1,5 +1,6 @@
 <div class="step-wrapper">
   <app-form-generator
+    [step] = "step"
     [formName]="step.formName"
     [fields]="step.form"
     [formId]="step.formId"
